fixed alignment issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,6 +139,7 @@ section#home-reviews p{
       padding-top: 3%;
       padding-bottom: 3%;
       margin-bottom: 1%;
+      width: 100%;
     }
 .main-section{
 	padding: 15px;
